@@ -40,7 +40,7 @@ class ChartDb
     int openChart (QString);
     void setBarCompression (BarData::BarCompression);
     void setBarRange (int);
-    void dump (QString);
+    void dump (QString, bool);
     Bar * getLastBar ();
     QStringList getChartObjectsList ();    
     QPtrList<Setting> getChartObjects ();
