@@ -238,14 +238,15 @@ QString CC::createNew ()
   return s;
 }
 
-void CC::dump (QString d)
+void CC::dump (QString d, bool f)
 {
   QFile outFile(d);
   if (! outFile.open(IO_WriteOnly))
     return;
   QTextStream outStream(&outFile);
   
-  dumpHeader(outStream);
+  if (! f)
+    dumpHeader(outStream);
 
   fseek(db, sizeof(ChartHeader), SEEK_SET);
   while (fread(&record, recordSize, 1, db))
@@ -254,10 +255,10 @@ void CC::dump (QString d)
       continue;
   
     outStream << QString::number(record.date, 'f', 0) << ",";
-    outStream << QString::number(record.open, 'g', 4) << ",";
-    outStream << QString::number(record.high, 'g', 4) << ",";
-    outStream << QString::number(record.low, 'g', 4) << ",";
-    outStream << QString::number(record.close, 'g', 4) << ",";
+    outStream << QString::number(record.open, 'f', 4) << ",";
+    outStream << QString::number(record.high, 'f', 4) << ",";
+    outStream << QString::number(record.low, 'f', 4) << ",";
+    outStream << QString::number(record.close, 'f', 4) << ",";
     outStream << QString::number(record.volume, 'f', 0) << ",";
     outStream << QString::number(record.oi) << "\n";
   }  
