@@ -57,7 +57,7 @@ class CC : public DbPlugin
     BarData * getHistory ();
     void dbPrefDialog ();
     void saveDbDefaults (Setting *);
-    void dump (QString);
+    void dump (QString, bool);
     void deleteBar (QString);
     int readRecord ();
     int writeRecord ();
