@@ -48,7 +48,7 @@ class Futures : public DbPlugin
     ~Futures ();
     void dbPrefDialog ();
     void saveDbDefaults (Setting *);
-    void dump (QString);
+    void dump (QString, bool);
     void deleteBar (QString);
     int readRecord ();
     int writeRecord ();
