@@ -51,7 +51,7 @@ class Spread : public DbPlugin
     QString createNew ();
     void dbPrefDialog ();
     void saveDbDefaults (Setting *);
-    void dump (QString);
+    void dump (QString, bool);
     void deleteBar (QString);
     int readRecord ();
     int writeRecord ();
