@@ -52,26 +52,27 @@ void Stocks::saveDbDefaults (Setting *set)
   saveFlag = TRUE;
 }
 
-void Stocks::dump (QString d)
+void Stocks::dump (QString d, bool f)
 {
   QFile outFile(d);
   if (! outFile.open(IO_WriteOnly))
     return;
   QTextStream outStream(&outFile);
   
-  dumpHeader(outStream);
+  if (! f)
+    dumpHeader(outStream);
 
   fseek(db, sizeof(ChartHeader), SEEK_SET);
   while (fread(&record, recordSize, 1, db))
   {
-//    if (! record.state)
-//      continue;
-      
+    if (! record.state)
+      continue;
+  
     outStream << QString::number(record.date, 'f', 0) << ",";
-    outStream << QString::number(record.open, 'g', 4) << ",";
-    outStream << QString::number(record.high, 'g', 4) << ",";
-    outStream << QString::number(record.low, 'g', 4) << ",";
-    outStream << QString::number(record.close, 'g', 4) << ",";
+    outStream << QString::number(record.open, 'f', 2) << ",";
+    outStream << QString::number(record.high, 'f', 2) << ",";
+    outStream << QString::number(record.low, 'f', 2) << ",";
+    outStream << QString::number(record.close, 'f', 2) << ",";
     outStream << QString::number(record.volume, 'f', 0) << "\n";
   }  
 
