@@ -47,7 +47,7 @@ class Stocks : public DbPlugin
     ~Stocks ();
     void dbPrefDialog ();
     void saveDbDefaults (Setting *);
-    void dump (QString);
+    void dump (QString, bool);
     void deleteBar (QString);
     int readRecord ();
     int writeRecord ();
